--- a/add_markers/CMakeLists.txt
+++ b/add_markers/CMakeLists.txt
@@ -133,6 +133,7 @@ ${catkin_INCLUDE_DIRS}
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(${PROJECT_NAME} src/add_markers.cpp)
+add_executable(${PROJECT_NAME}_init src/add_markers_init.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -146,6 +147,10 @@ add_executable(${PROJECT_NAME} src/add_markers.cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}
+   ${catkin_LIBRARIES}
+)
+
+target_link_libraries(${PROJECT_NAME}_init
    ${catkin_LIBRARIES}
 )
 
